--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ KERNEL_ABI_VERSION=$(shell echo "$(VERSION)" | sed -ne 's/\([0-9]*\.[0-9]*\.[0-9
 
 DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
-FLAVOURS=generic lowlatency
+FLAVOURS=generic
 
 clean: debian/control
 	dh_testdir
