--- a/debian/rules
+++ b/debian/rules
@@ -6,14 +6,16 @@ DEBIAN=$(shell awk -F= '($$1 == "DEBIAN") { print $$2 }' <debian/debian.env)
 
 SERIES=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SDistribution | sed -e 's/-\(security\|updates\|proposed\)$$//')
 SOURCE=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SSource)
-KERNEL_SOURCE=$(shell echo "$(SOURCE)" | sed -e 's/-uc22//')
+KERNEL_SOURCE=$(shell echo "$(SOURCE)" | sed -e 's/-uc22-iot//')
 
 VERSION=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SVersion)
 KERNEL_ABI_VERSION=$(shell echo "$(VERSION)" | sed -ne 's/\([0-9]*\.[0-9]*\.[0-9]*\-[0-9]*\)\..*/\1/p')
 
 DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
-FLAVOURS=generic
+CMDLINE="console=tty0 console=ttyMSM0,115200n8 panic=-1 clk_ignore_unused pd_ignore_unused snapd_lk_boot_disk=sde androidboot.hardware=qcom androidboot.memcg=1 video=vfb:640x400,bpp=32,memsize=3072000 androidboot.usbcontroller=a600000.dwc3 firmware_class.path=/lib/firmware/ systemd.log_target=console"
+
+FLAVOURS=iot
 
 clean: debian/control
 	dh_testdir
@@ -65,6 +67,12 @@ override_dh_auto_build:
 			--initrd $(initrd);					\
 		cp -p $(efi)-$(KERNEL_ABI_VERSION)-$$flavour			\
 			$(signingv)/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour.efi;\
+		cp -av $(initrd)-$(KERNEL_ABI_VERSION)-$$flavour $(initrd);\
+		cp -fv $(outdir)/$$flavour/boot/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour $(outdir)/Image-dtb;\
+		mkbootimg --kernel $(outdir)/Image-dtb --ramdisk $(initrd) --pagesize 4096 \
+			--base 0x80000000 --kernel_offset 0x8000 --ramdisk_offset 0x1000000 \
+			--tags_offset 0x100 --cmdline $(CMDLINE) \
+			--output $(signingv)/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour.android-kernel; \
 	done
 	cp /usr/lib/ubuntu-core-initramfs/main/usr/lib/snapd/info $(signingv)/snapd-info
 	{ echo "tarball"; } >$(signingv)/control/options
