--- a/debian/rules
+++ b/debian/rules
@@ -66,12 +66,14 @@ override_dh_auto_build:
 			--initrd $(initrd);					\
 		cp -p $(efi)-$(KERNEL_ABI_VERSION)-$$flavour			\
 			$(signingv)/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour.efi;\
-		cp -av $(initrd)-$(KERNEL_ABI_VERSION)-$$flavour $(initrd);\
-		cp -fv $(outdir)/$$flavour/boot/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour $(outdir)/Image-dtb;\
-		mkbootimg --kernel $(outdir)/Image-dtb --ramdisk $(initrd) --pagesize 4096 \
-			--base 0x80000000 --kernel_offset 0x8000 --ramdisk_offset 0x1000000 \
-			--tags_offset 0x100 --cmdline $(CMDLINE) \
-			--output $(signingv)/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour.android-kernel; \
+		if [ "$(DEB_HOST_ARCH)" = "arm64" ]; then \
+			cp -av $(initrd)-$(KERNEL_ABI_VERSION)-$$flavour $(initrd);\
+			cp -fv $(outdir)/$$flavour/boot/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour $(outdir)/Image-dtb;\
+			mkbootimg --kernel $(outdir)/Image-dtb --ramdisk $(initrd) --pagesize 4096 \
+				--base 0x80000000 --kernel_offset 0x8000 --ramdisk_offset 0x1000000 \
+				--tags_offset 0x100 --cmdline $(CMDLINE) \
+				--output $(signingv)/vmlinuz-$(KERNEL_ABI_VERSION)-$$flavour.android-kernel; \
+		fi; \
 	done
 	cp /usr/lib/ubuntu-core-initramfs/main/usr/lib/snapd/info $(signingv)/snapd-info
 	{ echo "tarball"; } >$(signingv)/control/options
