--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ DEBIAN=$(shell awk -F= '($$1 == "DEBIAN") { print $$2 }' <debian/debian.env)
 
 SERIES=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SDistribution | sed -e 's/-\(security\|updates\|proposed\)$$//')
 SOURCE=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SSource)
-KERNEL_SOURCE=$(shell echo "$(SOURCE)" | sed -e 's/-uc22-iot//')
+KERNEL_SOURCE=$(shell echo "$(SOURCE)" | sed -e 's/-uc22-capilano//')
 
 VERSION=$(shell dpkg-parsechangelog -l$(DEBIAN)/changelog -SVersion)
 KERNEL_ABI_VERSION=$(shell echo "$(VERSION)" | sed -ne 's/\([0-9]*\.[0-9]*\.[0-9]*\-[0-9]*\)\..*/\1/p')
@@ -15,7 +15,7 @@ DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
 CMDLINE="console=tty0 console=ttyMSM0,115200n8 panic=-1 clk_ignore_unused pd_ignore_unused snapd_lk_boot_disk=sde androidboot.hardware=qcom androidboot.memcg=1 video=vfb:640x400,bpp=32,memsize=3072000 androidboot.usbcontroller=a600000.dwc3 firmware_class.path=/lib/firmware/ systemd.log_target=console"
 
-FLAVOURS=iot
+FLAVOURS=capilano
 
 clean: debian/control
 	dh_testdir
