--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ KERNEL_ABI_VERSION=$(shell echo "$(VERSION)" | sed -ne 's/\([0-9]*\.[0-9]*\.[0-9
 
 DEB_HOST_ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
-CMDLINE="console=tty0 console=ttyMSM0,115200n8 panic=-1 clk_ignore_unused pd_ignore_unused snapd_lk_boot_disk=sde androidboot.hardware=qcom androidboot.memcg=1 video=vfb:640x400,bpp=32,memsize=3072000 androidboot.usbcontroller=a600000.dwc3 firmware_class.path=/lib/firmware/ systemd.log_target=console"
+CMDLINE="console=tty0 console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused stmmac.phyaddr=4"
 
 FLAVOURS=capilano
 
