UBUNTU: [Packaging] intel-opt: Add libtraceevent-dev
BugLink: https://bugs.launchpad.net/bugs/2037380

Required to enable "perf kvm stat".

Signed-off-by: Philip Cox <philip.cox@canonical.com>

--- a/debian.intel-opt/control.stub.in
+++ b/debian.intel-opt/control.stub.in
@@ -48,6 +48,7 @@ Build-Depends:
  clang [amd64],
  llvm [amd64],
  libstdc++-dev,
+ libtraceevent-dev,
 Build-Depends-Indep:
  xmlto <!stage1>,
  docbook-utils <!stage1>,
