UBUNTU: [Packaging] add Rust 1.73 dependency
Now that we have versioned packages for Rust 1.73 update the kernel
dependencies to lock this version.

Signed-off-by: Andrea Righi <andrea.righi@canonical.com>

--- a/debian.master/control.stub.in
+++ b/debian.master/control.stub.in
@@ -42,9 +42,9 @@ Build-Depends:
  pahole [amd64 arm64 armhf ppc64el s390x riscv64] | dwarves (>= 1.21) [amd64 arm64 armhf ppc64el s390x riscv64] <!stage1>,
  clang-17 [amd64 arm64 armhf ppc64el s390x],
  libclang1-17 [amd64 arm64 armhf ppc64el s390x],
- rustc [amd64 arm64 armhf ppc64el s390x],
- rust-src [amd64 arm64 armhf ppc64el s390x],
- rustfmt [amd64 arm64 armhf ppc64el s390x],
+ rustc-1.73 [amd64 arm64 armhf ppc64el s390x],
+ rust-1.73-src [amd64 arm64 armhf ppc64el s390x],
+ rustfmt-1.73 [amd64 arm64 armhf ppc64el s390x],
  bindgen-0.65 [amd64 arm64 armhf ppc64el s390x],
  libstdc++-dev,
 Build-Depends-Indep:
